@@ -12,11 +12,11 @@
 from gi.repository import Gio # pylint: disable=E0611
 
 import gettext, locale
-from gettext import gettext as _
+from locale import gettext as _
 from accomplishments.util.paths import locale_dir
 locale.bindtextdomain('accomplishments-viewer', locale_dir)
 gettext.bindtextdomain('accomplishments-viewer',locale_dir)
-gettext.textdomain('accomplishments-viewer')
+locale.textdomain('accomplishments-viewer')
 
 from accomplishments.daemon import dbusapi
 import os, xdg.BaseDirectory, ConfigParser
