@@ -6,11 +6,11 @@
 import optparse
 
 import gettext, locale
-from gettext import gettext as _
+from locale import gettext as _
 from accomplishments.util.paths import locale_dir
 locale.bindtextdomain('accomplishments-viewer', locale_dir)
 gettext.bindtextdomain('accomplishments-viewer',locale_dir)
-gettext.textdomain('accomplishments-viewer')
+locale.textdomain('accomplishments-viewer')
 
 from gi.repository import Gtk # pylint: disable=E0611
 
